syntax = "proto3";

package notifications;

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string user_id = 1;
  string template_name = 2;
  string recipient_address = 3;
  string payload_json = 4;
}

message SendNotificationResponse {
  string notification_id = 1;
  string status = 2;
}